<resources>
    <string name="app_name">OrderApp</string>

    <!--Messages-->
    <string name="table_msg">Welcome</string>
    <string name="menu_msg">Choose Products</string>
    <string name="basket_msg">Review Basket</string>
    <string name="orders_msg">View Orders</string>
    <string name="filter_msg">Apply Filters</string>

    <!--Labels-->
    <string name="table_number">Table Number</string>
    <string name="menu_price">%1$d €</string>
    <string name="basket_quantity">x %1$d</string>
    <string name="basket_prize">= %1$d €</string>
    <string name="basket_totalPrize">Total Prize: %1$d €</string>
    <string name="basket_totalCount">Number Of Products: %1$d</string>

    <!--Buttons-->
    <string name="btn_tableNumber">Table Number: %1$d</string>
    <string name="btn_next">See Menu</string>
    <string name="btn_server">See Orders</string>
    <string name="btn_dbReset">Reset Database</string>
    <string name="btn_basket">Your Basket</string>
    <string name="btn_menu">Back To Menu</string>
    <string name="btn_submit">Submit Order</string>
    <string name="btn_rmv">-</string>
    <string name="btn_add">+</string>
    <string name="btn_back">Back</string>
    <string name="btn_done">Order Done</string>
    <string name="btn_filters">Filters</string>

</resources>