<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="32dp"
        android:text="@string/table_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTableNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/table_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <EditText
        android:id="@+id/numTable"
        android:labelFor="@id/tvTableNumber"
        android:hint="@string/table_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvTableNumber"
        app:layout_constraintStart_toEndOf="@+id/tvTableNumber"
        app:layout_constraintTop_toTopOf="@+id/tvTableNumber"
        android:autofillHints="Number of your table" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTableNumber" />

    <Button
        android:id="@+id/btnServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_server"
        app:layout_constraintEnd_toEndOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/btnNext" />

    <Button
        android:id="@+id/btnDbReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_dbReset"
        app:layout_constraintEnd_toEndOf="@+id/btnServer"
        app:layout_constraintStart_toStartOf="@+id/btnServer"
        app:layout_constraintTop_toBottomOf="@+id/btnServer" />
</androidx.constraintlayout.widget.ConstraintLayout>